# MyPal

./: .gitattributes  .gitignore  ACTION_PLAN.md  AGENT.md  AUTORUN.ps1  AVALONIA_DESIGN_SYSTEM.md  AVALONIA_MIGRATION_GUIDE.md  AVALONIA_UI_MOCKUPS.md  CHANGELOG.md  CHAT_INPUT_BUG_FIX.md  DECISION_VISUAL_SUMMARY.md  DEPRECATION_SUMMARY.md  DOCUMENTATION_INDEX.md  GITHUB_ISSUES_SUMMARY.md  GPT5_CODEX_PROMPT.md  IMPLEMENTATION_COMPLETE.md  ISSUES_INDEX.md  ISSUES_TO_CREATE.md  ISSUE_ANALYSIS_REPORT.md  LAUNCHER_README.md  MULTI_PAL_IMPLEMENTATION_PLAN.md  MyPal.bat  MyPal.sln  MyPal.vbs  ORGANIZATION_SUMMARY.md  PROJECT_STRUCTURE.md  QUICKSTART_ISSUES.md  README.md  REORGANIZATION_SUMMARY.md  STORAGE_OPTIMIZATION_SUMMARY.md  TAURI_MIGRATION_GUIDE.md  TESTING.md  TESTING_NEW_PAL_INPUT_FIX.md  TEST_IMPLEMENTATION_SUMMARY.md  TODO  TODO v0.2.md  TYPING_INDICATOR_FIX.md  autorun.ps1  check-requirements.ps1  quick_todo.md  (+3 more)
.github/: copilot-instructions.md
MyPal/: README.md  REORGANIZATION_SUMMARY.md  autorun.ps1
app/: README.md
app/desktop/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
app/desktop/tauri-app/src-tauri/src/: main.rs
dev_docs/: server_err.txt  server_out.txt  sync_with_drive.ps1
docs/: AI_QUICK_START.md  AI_SETUP_GUIDE.md  DOCUMENTATION_INDEX.md
issues/: ISSUE_TEMPLATE.md  create-github-issues.ps1
launcher/: README.md  main.js  package-lock.json  package.json
mobile/: .gitignore  App.tsx  CREATION_SUMMARY.md  MEDIA_ASSETS.md  README.md  SETUP_GUIDE.md  app.json  metro.config.js  package.json  setup-backend.ps1  tsconfig.json
(+243 files in other folders)
